# SDL_Platformer

./: .gitignore  CMakeLists.txt
include/: Entity.h  Events.h  RenderWindow.h  TextureWrapper.h
src/: Entity.cpp  Events.cpp  RenderWindow.cpp  main.cpp
